Fixed scrollbar (it has to be not visible) in second carousel

--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -641,6 +641,10 @@ nav{
   margin-bottom: 120px;
 }
 
+.review_cards::-webkit-scrollbar{
+  display: none;
+}
+
 .review_cards .card{
   border-radius: 7px;
   width: 95%;
